// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`asterisk.md 1`] = `
*123*
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
_123_

`;

exports[`underscore.md 1`] = `
_123_
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
_123_

`;
